# pitstopprotocol

./: .prettierignore  Anchor.toml  Cargo.toml  README.md  SPEC_ACCOUNTS.md  SPEC_CANONICAL.md  SPEC_ERRORS.md  SPEC_EVENTS.md  SPEC_INVARIANTS.md  SPEC_PROTOCOL.md  SPEC_STATE_MACHINE.md  SPEC_STATE_SCHEMA.md  SPEC_THREAT_MODEL.md  STRUCTURE.md  package-lock.json  package.json  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: anchor-task.yml  bug.yml  content.yml  mobile-ui-task.yml
.github/workflows/: anchor-integration-tests.yml  devnet-deploy.yml  full-tests.yml  harness-smoke.yml  rust-tests.yml  spec-gates.yml  unit-tests.yml
SPEC_INSTRUCTIONS/: INDEX.md  README.md  add_outcome.md  cancel_market.md  claim_resolved.md  claim_voided.md  create_market.md  finalize_seeding.md  initialize.md  lock_market.md  place_bet.md  resolve_market.md  sweep_remaining.md  void_market.md
apps/mobile/: README.md  package.json
backend/: README.md
configs/: program-ids.json
docs/: ARCHITECTURE.md  PROJECT_PLAN.md  devnet-deploy-runbook.md
frontend/: README.md
programs/pitstop/: Cargo.toml
programs/pitstop/src/: anchor_accounts.rs  anchor_errors.rs  anchor_events.rs  constants.rs  error.rs  events.rs  lib.rs  math.rs  pda.rs  state.rs
programs/pitstop/src/instructions/: add_outcome.rs  cancel_market.rs  claim_resolved.rs  claim_voided.rs  create_market.rs  finalize_seeding.rs  initialize.rs  lock_market.rs  mod.rs  place_bet.rs  resolve_market.rs  sweep_remaining.rs  void_market.rs
programs/pitstop/tests/: anchor_wire_103.rs  anchor_wire_104.rs  anchor_wire_105.rs
scripts/: run_all_tests.js  spec_gate_check.js
specs/: constants.json
tests/: README.md  canonical.spec.js  smoke.spec.js
(+72 files in other folders)
