[package]
name = "pitstop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Anchor-generated cfg flags (silence Rust's `unexpected_cfgs` warnings on stable).
cpi = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
sha2 = "0.10"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
