[package]
name = "pitstop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Anchor-generated cfg flags (silence Rust's `unexpected_cfgs` warnings on stable).
cpi = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
sha2 = "0.10"

[dev-dependencies]
# Solana tooling / SDK crates aligned to Solana 2.3.x
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"

# SPL crates aligned with Solana 2.3.x
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
